--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a href="https://www.instagram.com/mr_vinayak_43/?next=%2F"><i class="bi bi-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/tata-vinayak-b0508a2bb/"><i class="bi bi-linkedin"></i></a>
                     <a href="https://www.facebook.com/Vinayaktata14"><i class="bi bi-facebook"></i></a>
-                    <a href="VINAYAK TATA .pdf" download class="download-btn">
+                    <a href="VINAYAK_TATA.pdf" download class="download-btn">
                         <i class="bi bi-download"></i> Download Resume
                     </a>
                 </div>
